--- a/MudanzasGuaymasSolucion/MudanzasGuaymasServices/Web.config
+++ b/MudanzasGuaymasSolucion/MudanzasGuaymasServices/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -19,7 +19,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-<add name="MudanzasGuaymasDbEntities" connectionString="metadata=res://*/Entity.Modelo.csdl|res://*/Entity.Modelo.ssdl|res://*/Entity.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\servidor_pruebas;initial catalog=MudanzasGuaymasDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
+  <add name="MudanzasGuaymasDbEntities" connectionString="metadata=res://*/Entity.Modelo.csdl|res://*/Entity.Modelo.ssdl|res://*/Entity.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\servidor_pruebas;initial catalog=MudanzasGuaymasDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -31,8 +32,22 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
+    <services>
+      <service name="MudanzasGuaymasServices.Services.CRUD.SrvUsuario" behaviorConfiguration="ServiceBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.CRUD.ISrvUsuario" behaviorConfiguration="web"></endpoint>
+      </service>
+    </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
+        <behavior name="ServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
