--- a/MudanzasGuaymasSolucion/MudanzasGuaymasServices/bin/MudanzasGuaymasServices.dll.config
+++ b/MudanzasGuaymasSolucion/MudanzasGuaymasServices/bin/MudanzasGuaymasServices.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -32,8 +32,22 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
+    <services>
+      <service name="MudanzasGuaymasServices.Services.CRUD.SrvUsuario" behaviorConfiguration="ServiceBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.CRUD.ISrvUsuario" behaviorConfiguration="web"></endpoint>
+      </service>
+    </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
+        <behavior name="ServiceBehavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
