--- a/MudanzasGuaymasSolucion/MudanzasGuaymasServices/bin/MudanzasGuaymasServices.dll.config
+++ b/MudanzasGuaymasSolucion/MudanzasGuaymasServices/bin/MudanzasGuaymasServices.dll.config
@@ -20,7 +20,8 @@
   </system.codedom>
   <connectionStrings>
     
- <add name="MudanzasGuaymasDbEntities" connectionString="metadata=res://*/Entity.Modelo.csdl|res://*/Entity.Modelo.ssdl|res://*/Entity.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\servidor_pruebas;initial catalog=MudanzasGuaymasDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+ 
+<add name="MGEntidades" connectionString="metadata=res://*/Entity.Modelo.csdl|res://*/Entity.Modelo.ssdl|res://*/Entity.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\servidor_pruebas;initial catalog=MudanzasGuaymasDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -32,9 +33,12 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
+
     <services>
       <service name="MudanzasGuaymasServices.Services.CRUD.SrvUsuario" behaviorConfiguration="ServiceBehavior">
-        <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.CRUD.ISrvUsuario" behaviorConfiguration="web"></endpoint>
+        <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.CRUD.ISrvUsuario" behaviorConfiguration="web">
+          
+        </endpoint>
       </service>
       <service name="MudanzasGuaymasServices.Services.SrvServicio" behaviorConfiguration="ServiceBehavior">
         <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.ISrvServicio" behaviorConfiguration="web"></endpoint>
@@ -45,14 +49,19 @@
       <service name="MudanzasGuaymasServices.Services.SrvPaquete" behaviorConfiguration="ServiceBehavior">
         <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.ISrvPaquete" behaviorConfiguration="web"></endpoint>
       </service>
+      <service name="MudanzasGuaymasServices.Services.Operaciones.SrvPreCita" behaviorConfiguration="ServiceBehavior">
+        <endpoint address="" binding="webHttpBinding" contract="MudanzasGuaymasServices.Services.Operaciones.ISrvPreCita" behaviorConfiguration="web"></endpoint>
+      </service>
     </services>
     <behaviors>
+ 
       <endpointBehaviors>
         <behavior name="web">
           <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
+        
         <behavior name="ServiceBehavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
@@ -64,5 +73,6 @@
       </serviceBehaviors>
     </behaviors>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+   
   </system.serviceModel>
 </configuration>
