--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/MudanzasGuaymasWeb.csproj
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/MudanzasGuaymasWeb.csproj
@@ -257,9 +257,25 @@
     <Content Include="Content\edge-candy.svg" />
     <Content Include="Content\edge-cream.svg" />
     <Content Include="Content\embalaje.jpg" />
+    <Content Include="Content\estilo100.css" />
     <Content Include="Content\estilo720.css" />
     <Content Include="Content\estilos.css" />
     <Content Include="Content\Formulario.css" />
+    <Content Include="Content\iconos\add.png" />
+    <Content Include="Content\iconos\addicon.png" />
+    <Content Include="Content\iconos\cancel.png" />
+    <Content Include="Content\iconos\Cita.png" />
+    <Content Include="Content\iconos\confirm.png" />
+    <Content Include="Content\iconos\delete.png" />
+    <Content Include="Content\iconos\edit schedule.png" />
+    <Content Include="Content\iconos\editar.png" />
+    <Content Include="Content\iconos\history.png" />
+    <Content Include="Content\iconos\historyicon.png" />
+    <Content Include="Content\iconos\Home.png" />
+    <Content Include="Content\iconos\LogOut1.png" />
+    <Content Include="Content\iconos\QuienesSomos.png" />
+    <Content Include="Content\iconos\Servicios.png" />
+    <Content Include="Content\iconos\Usuarios2.png" />
     <Content Include="Content\imagen1.png" />
     <Content Include="Content\imagen2.jpg" />
     <Content Include="Content\imagen2.png" />
