--- a/MudanzasGuaymasWeb/MudanzasGuaymasWeb/MudanzasGuaymasWeb.csproj
+++ b/MudanzasGuaymasWeb/MudanzasGuaymasWeb/MudanzasGuaymasWeb.csproj
@@ -278,6 +278,7 @@
     <Content Include="Content\iconos\LogOut1.png" />
     <Content Include="Content\iconos\QuienesSomos.png" />
     <Content Include="Content\iconos\Registrar.png" />
+    <Content Include="Content\iconos\registrarse.png" />
     <Content Include="Content\iconos\Servicios.png" />
     <Content Include="Content\iconos\Usuarios2.png" />
     <Content Include="Content\imagen1.png" />
